# legendary-kaiju

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: kaiju-ground-truth-researcher.md  kaiju-quant-researcher.md  kaiju-reviewer.md
.github/: CODEOWNERS
.github/workflows/: ci.yml
deploy/: com.kaiju.daily.plist  run_daily.sh
docs/: INVARIANTS.md
docs/agents/: EXPERIMENTS.md  LEDGER.md  LOOP.md  README.md  TASK_TEMPLATE.md  python-language-pack.md
kaiju/: config.py  logging.py  runner.py  seams.py  state.py  types.py
kaiju/data/: forecast.py  obs.py
kaiju/eval/: gate.py  metrics.py
kaiju/execution/: paper_sim.py  position_manager.py
kaiju/markets/: kalshi_client.py  parser.py  ws_client.py
kaiju/model/: calibration.py  distribution.py  nowcast.py
kaiju/risk/: limits.py
kaiju/strategy/: edge.py  exit_policy.py  fairvalue.py  fees.py  sizing.py
scripts/: block-danger-zones.sh  setup-branch-protection.sh
tests/: test_config.py  test_danger_zone_hook.py  test_deploy_smoke.py  test_retrain.py  test_runner.py  test_runner_nowcast_wiring.py  test_runner_ws_events.py  test_scaffold.py  test_scope_lock.py  test_seams.py  test_settlement.py  test_state.py  test_state_v2.py  test_types.py  test_types_v2.py
tests/data/: test_forecast.py  test_obs.py
tests/eval/: test_gate.py  test_metrics.py
tests/execution/: test_paper_sim.py  test_position_manager.py
tests/fixtures/: gefs_knyc.json  iem_knyc_asos.json  nbm_knyc.json  (+1 more)
(+33 files in other folders)
