[project]
name = "kaiju"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "httpx>=0.27",
  "cryptography>=42",
  "numpy>=1.26",
  "scipy>=1.13",
  "pandas>=2.2",
  "xarray>=2024.6",
  "herbie-data>=2024.8",
  "cfgrib>=0.9.12",
  "structlog>=24.1",
]

[dependency-groups]
dev = ["pytest>=8", "respx>=0.21", "ruff>=0.5", "mypy>=1.10", "freezegun>=1.5"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
